plugins {
    id 'java'
//    id 'org.springframework.boot' version '3.4.2'
    id 'org.springframework.boot' version '3.4.7'
    id 'io.spring.dependency-management' version '1.1.7'
    // JAXB Plugin
    id 'com.intershop.gradle.jaxb' version '7.0.0'
}

group = 'com.example.app'
version = '0.0.1-SNAPSHOT'
description = 'FlightSearch'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // The main starter for SOAP (includes WebServiceTemplate and Spring OXM)
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'

// Correct Group ID for JAXB 4.x
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.3'

    // JAXB API
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'


    implementation 'org.postgresql:postgresql:42.7.5'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
